...

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
...
                android:backgroundTint="@color/lightGrey"
                android:onClick="xSquaredOnClick"
                android:id="@+id/xSquaredButton"
                android:text="x^2"
                android:textColor="@color/black"
...
                android:onClick="xToThePowerOfYOnClick"
                android:text="x^y"
                android:id="@+id/xToYButton"
                android:textColor="@color/black"
                android:textSize="@dimen/advCalcButtonTextSize" />
...
                android:onClick="lnOnClick"
                android:text="ln"
                android:id="@+id/lnButton"
                android:textColor="@color/black"
                android:textSize="@dimen/advCalcButtonTextSize" />
...
                android:onClick="logOnClick"
                android:text="log"
                android:id="@+id/logButton"
                android:textColor="@color/black"
                android:textSize="@dimen/advCalcButtonTextSize" />
...
                android:onClick="sqrtOnClick"
                android:text="sqrt"
                android:id="@+id/sqrtButton"
                android:textColor="@color/black"
                android:textSize="@dimen/advCalcButtonTextSize" />
...
                android:onClick="sinOnClick"
                android:text="sin"
                android:id="@+id/sinButton"
                android:textColor="@color/black"
                android:textSize="@dimen/advCalcButtonTextSize" />
...
                android:onClick="cosOnClick"
                android:text="cos"
                android:id="@+id/cosButton"
                android:textColor="@color/black"
                android:textSize="@dimen/advCalcButtonTextSize" />
...
                android:onClick="tanOnClick"
                android:text="tan"
                android:id="@+id/tanButton"
                android:textColor="@color/black"
                android:textSize="@dimen/advCalcButtonTextSize" />
...
                android:textColor="@color/white"
                android:onClick="numberButtonHandler"
                android:id="@+id/button7"
                android:text="7"/>

...
                android:textColor="@color/white"
                android:onClick="numberButtonHandler"
                android:id="@+id/button8"
                android:text="8"/>

...
                android:backgroundTint="@color/tintGrey"
                android:textColor="@color/white"
                android:id="@+id/button4"
                android:onClick="numberButtonHandler"
                android:text="4"/>
...
                android:textColor="@color/white"
                android:onClick="numberButtonHandler"
                android:id="@+id/button5"
                android:text="5"/>

...
                android:textColor="@color/white"
                android:onClick="minusOnClick"
                android:id="@+id/minus"
                android:paddingTop="0dp"
                android:text="-"/>
...
                android:textColor="@color/white"
                android:onClick="numberButtonHandler"
                android:id="@+id/button1"
                android:text="1"/>

...
                android:backgroundTint="@color/tintGrey"
                android:textColor="@color/white"
                android:id="@+id/button2"
                android:text="2"
                android:onClick="numberButtonHandler"/>
...
                android:backgroundTint="@color/tintGrey"
                android:textColor="@color/white"
                android:id="@+id/button3"
                android:text="3"
                android:onClick="numberButtonHandler"/>
...
                android:textColor="@color/white"
                android:text="+"
                android:id="@+id/plus"
                android:onClick="plusOnClick"/>

...
                android:backgroundTint="@color/tintGrey"
                android:textColor="@color/white"
                android:id="@+id/button0"
                android:text="0"
                android:onClick="numberButtonHandler"/>
...
                android:backgroundTint="@color/tintGrey"
                android:textColor="@color/white"
                android:id="@+id/decimal"
                android:text=","
                android:onClick="decimalOnClick"/>
...
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:id="@+id/equals"/>

        </LinearLayout>
...
